--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "joi": "^17.4.0",
+    "nock": "^13.0.11",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@santima10/eslint-config": "1.3.0",
     "@types/hapi__hapi": "^20.0.7",
     "@types/jest": "^26.0.22",
+    "@types/node-fetch": "^2.5.10",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "eslint": "7",
     "eslint-config-prettier": "^8.1.0",
